--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -6,7 +6,7 @@ ja:
         goods: "グッズ"
     review:
       people:
-        family: 家族
+        family: "家族"
         relative: "親族"
         friend: "友達"
         company: "会社"
